--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "css-loader": "^4.2.1",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "style-loader": "^1.2.1"
   },
   "engines": {
-    "npm":  "6.14.x",
-    "node": "12.18.x"
+    "npm": "6.x.x",
+    "node": "12.x.x"
   },
   "scripts": {
     "start": "react-scripts start",
