--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "style-loader": "^1.2.1"
   },
   "engines": {
-    "npm": "6.x.x",
-    "node": "12.x.x"
+    "npm": "6.12.x",
+    "node": "12.18.x",
+    "yarn": "1.22.x"
   },
   "scripts": {
     "start": "react-scripts start",
