--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-jss": "^10.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-text-loop": "^2.3.0",
     "style-loader": "^1.2.1"
   },
   "engines": {
