--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-jss": "^10.4.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-text-loop": "^2.3.0",
+    "redux-persist": "^6.0.0",
     "style-loader": "^1.2.1"
   },
   "engines": {
@@ -48,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux": "^4.0.5"
   }
 }
