--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "css-loader": "^4.2.1",
     "express": "^4.17.1",
@@ -33,7 +34,7 @@
     "yarn": "1.22.x"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"cd ./server && node index.js \"",
     "build": "react-scripts build",
     "test": "mocha 'server/tests/*.test.js'",
     "eject": "react-scripts eject"
