--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "yarn": "1.22.x"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"cd ./server && node index.js \"",
+    "start": "concurrently \"react-scripts start\" \"cd ./server && node index.js && node server\"",
     "build": "react-scripts build",
     "test": "mocha 'server/tests/*.test.js'",
     "eject": "react-scripts eject"
