--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"cd ./server && node index.js && node server\"",
-    "build": "react-scripts build",
+    "build": "react-scripts build \"cd ./server && node index.js && node server\"",
     "test": "mocha 'server/tests/*.test.js'",
     "eject": "react-scripts eject"
   },
