--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "start": "cd ./server && node index.js",
-    "heroku-postbuild": "cd src && npm install && npm run build",
+    "heroku-postbuild": "npm install && npm run build",
     "test": "mocha 'server/tests/*.test.js'",
     "eject": "react-scripts eject"
   },
