--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "start": "cd ./server && node index.js",
     "build" : "react-scripts build",
-    "heroku-postbuild": "npm install && npm run build",
+    "heroku-postbuild": "yarn && npm run build",
     "test": "mocha 'server/tests/*.test.js'",
     "eject": "react-scripts eject"
   },
